# kpi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 51fc216e3329_create_cash_view.py  bb499cbf2109_create_kpi_table.py
kpi/: cash_view.py
kpi/common/: base.py
kpi/kpi/: __main__.py  kpi.py
