[project]
name = "kpi"
version = "0.1"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "alembic",
    "alembic_utils",
    "mypy",
    "psycopg2-binary",
    "pydantic",
    "pytest",
    "sqlalchemy",
]

[project.urls]
repository = "https://github.com/jodok/kpi"

[project.optional-dependencies]
formatters = ["black", "isort", "autoflake", "ruff"]

[tool.setuptools]
packages = ["kpi"]

[tool.ruff]
# Allow lines to be as long as 767 characters, this is currently the longest line
# TODO: This should be brought down in the future
line-length = 767
